# side-stacker

./: .gitignore  .gitmodules  README.md  docker-compose.yml
backend/: .env  Dockerfile.backend  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 583cda8a51b8_initialize_tables.py
backend/src/: db.py  game_logic.py  main.py  models.py
backend/tests/: test_game_logic.py
frontend/: .env  Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
