[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["mknaw <mknawara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.103.0"
websockets = "^11.0.3"
sqlalchemy = "^2.0.20"
alembic = "^1.11.3"
psycopg2 = "^2.9.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "src.main:runserver"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 120
